{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 157,
  "lineage": "3d1b986d-e916-e812-585f-78ba2f70c128",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:internet-gateway/igw-0839e362357a505f4",
            "id": "igw-0839e362357a505f4",
            "owner_id": "058898200941",
            "tags": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-igw",
              "Project": "SpotinstanceInterruptionTest"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-igw",
              "Project": "SpotinstanceInterruptionTest"
            },
            "vpc_id": "vpc-0ead2fa3e251954af"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0839e362357a505f4",
            "id": "r-rtb-038e026fadb208c8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038e026fadb208c8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:route-table/rtb-038e026fadb208c8b",
            "id": "rtb-038e026fadb208c8b",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0839e362357a505f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-public-route-table",
              "Project": "SpotinstanceInterruptionTest"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-public-route-table",
              "Project": "SpotinstanceInterruptionTest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ead2fa3e251954af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e5edf6b752b3cd7",
            "route_table_id": "rtb-038e026fadb208c8b",
            "subnet_id": "subnet-01cb83bf426ce6056"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d02ab182c27b0d0",
            "route_table_id": "rtb-038e026fadb208c8b",
            "subnet_id": "subnet-09803b5d6c814a54d"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-01cb83bf426ce6056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb83bf426ce6056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-public-subnet-1",
              "Project": "SpotinstanceInterruptionTest",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-public-subnet-1",
              "Project": "SpotinstanceInterruptionTest",
              "Type": "public"
            },
            "vpc_id": "vpc-0ead2fa3e251954af"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-09803b5d6c814a54d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09803b5d6c814a54d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-public-subnet-2",
              "Project": "SpotinstanceInterruptionTest",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-public-subnet-2",
              "Project": "SpotinstanceInterruptionTest",
              "Type": "public"
            },
            "vpc_id": "vpc-0ead2fa3e251954af"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:vpc/vpc-0ead2fa3e251954af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f3afe2bf3d9dff25",
            "default_route_table_id": "rtb-03dc0413a953293ca",
            "default_security_group_id": "sg-023700f3efc9e9afc",
            "dhcp_options_id": "dopt-64708a0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ead2fa3e251954af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03dc0413a953293ca",
            "owner_id": "058898200941",
            "tags": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-vpc",
              "Project": "SpotinstanceInterruptionTest"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "SpotinstanceInterruptionTest-dev-vpc",
              "Project": "SpotinstanceInterruptionTest"
            }
          }
        }
      ]
    },
    {
      "module": "module.spot_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spot_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:security-group/sg-0162073a2d7dca833",
            "description": "Security group for spot instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0162073a2d7dca833",
            "ingress": [],
            "name": "SpotinstanceInterruptionTest-dev-spot-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ead2fa3e251954af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}